[gd_scene load_steps=5 format=3 uid="uid://cf65dyq2id4sc"]

[ext_resource type="Script" path="res://src/EndLevel/EndLevel.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://dxj30yuudjutl" path="res://assets/sounds/tick/hit.wav" id="2_yojsl"]
[ext_resource type="AudioStream" uid="uid://btdg1w7mu0yb1" path="res://assets/sounds/tick/miss.wav" id="3_i0vdu"]
[ext_resource type="AudioStream" uid="uid://p827ewt2lqt" path="res://assets/sounds/tick/result.wav" id="4_lgvud"]

[node name="EndLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="CenterContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.5
offset_top = -71.5
offset_right = 68.5
offset_bottom = 71.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Level "

[node name="LevelNumber" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = " complete"

[node name="Result" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 4

[node name="Score" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Comment" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="NextLevelButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer3"]
layout_mode = 2
size_flags_horizontal = 0
text = "Next level"

[node name="Sounds" type="Node" parent="."]

[node name="Hit" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("2_yojsl")

[node name="Miss" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("3_i0vdu")

[node name="Result" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("4_lgvud")

[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer3/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
